--- a/src/components/Estilos.css
+++ b/src/components/Estilos.css
@@ -38,14 +38,14 @@ box-shadow: 0 0 10px rgba(240, 5, 5, 0.1);
 }
 
 .Formulario button:hover {
-    background-color: #0056b3;
+    background-color: #b34500;
 }
 .Formulario:hover{
     background-color: rgb(20, 4, 113);
 
 
 }
-.Formulario ya-tienes-cuenta {
+.Formulario .ya-tienes-cuenta {
     margin-top: 50rem;
     font-size: 160px;
     font-weight: bold;
@@ -63,3 +63,34 @@ box-shadow: 0 0 10px rgba(240, 5, 5, 0.1);
   .Formulario a:hover {
     text-decoration: underline; /* Solo subrayado al pasar el mouse */
   }
+  .container {
+  position: relative;
+  width: center;
+  height: center;
+  margin: 0 auto;
+  perspective: 1000px;
+}
+
+.formulario {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: all 0.9s ease;
+}
+
+/* Formulario activo en primer plano */
+.formulario.activo {
+  z-index: 20;
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* Formulario inactivo en el fondo 
+.formulario.inactivo {
+  z-index: 10;
+  opacity: 1;
+  transform: scale(0.95);
+  pointer-events: none;  Desactiva interacción con el formulario del fondo 
+} 
+
+*/
